# AstraLock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
config/: config.example.toml
daemon/: CMakeLists.txt  CMakeLists.txt.bak
daemon/include/facelock/: daemon.h  face_aligner.h  ipc_server.h  lbph_embedder.h  lbph_wrapper.h  lbph_wrapper.h.bak  onnx_wrapper.h  storage.h
daemon/src/: daemon.cpp  face_aligner.cpp  ipc_server.cpp  lbph_embedder.cpp  lbph_wrapper.cpp  main.cpp  onnx_wrapper.cpp  storage.cpp
helpers/: CMakeLists.txt  facelock_camera_helper.cpp
packaging/apparmor/: usr.bin.nc.openbsd
packaging/config/: facelock.conf
packaging/rootfs/etc/facelock/: facelock.conf
pam/: CMakeLists.txt  pam_facelock.c
scripts/: facelock  install_facelock.sh  make_emb_bin_from_raw.py  train_lbph.py  uninstall_facelock.sh
systemd/: facelockd.service
tools/: test_predict.cpp
